# Rea-Sixty

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  index.xml
captures/: foot_01_baseline.md  foot_01_baseline.pcapng  foot_02_foot1_tap.md  foot_02_foot1_tap.pcapng  foot_03_foot2_tap.md  foot_03_foot2_tap.pcapng
docs/: README-build-manual.md  build-manual.sh  concepts.md  install-macos.md  install-windows.md  instances-fx-handbuch.md  plan-fx-identity.md  plan-instance-cycle-cleanup.md  plan-nav-uc1-and-settings.md  plan-settings-ui.md  rea-sixty-vs-ssl-360.md  release-process.md  user-manual.md  windows-capture-workflow-uc1.md  youre-finally-free.md
docs/outreach/: build_ssl_preview_pdf.py
extension/: CMakeLists.txt  version-names.tsv
extension/cmake/: embed_factory_bundle.cmake  write_commit_count.cmake
extension/resources/: factory.rea60config  rea_sixty_winusb.inf
extension/src/: AutoLearnEngine.cpp  AutoLearnEngine.h  Bindings.cpp  Bindings.h  GrCalibration.h  MarkerOverlay.cpp  MarkerOverlay.h  MixerLayout.cpp  MixerWindow.cpp  MixerWindow.h  NavDispatch.cpp  NavDispatch.h  Palette.cpp  ParameterGroups.cpp  ParameterGroups.h  PluginChunkPatch.h  PluginMap.cpp  PluginMap.h  Protocol.cpp  Protocol.h  QuickLearnWindow.cpp  QuickLearnWindow.h  SettingsScreen.cpp  SettingsScreen.h  SettingsWindow.cpp  SettingsWindow.h  SetupBundle.cpp  SetupBundle.h  ThemeAssets.cpp  ThemeAssets.h  ThemeBridge.cpp  ThemeBridge.h  TrackName.cpp  TrackName.h  UC1Device.cpp  UC1Device.h  UC1PluginMap.cpp  UC1PluginMap.h  UC1Protocol.cpp  UC1Surface.cpp  (+9 more)
extension/tests/: test_protocol.cpp
